--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -38,12 +38,43 @@
 			</div>
 		</div>
 		{% endfor %}
-		{% if prev_url %}
-    <a href="{{ prev_url }}">Newer posts</a>
-    {% endif %}
-    {% if next_url %}
-    <a href="{{ next_url }}">Older posts</a>
-    {% endif %}
+	<nav>
+			<ul style="list-style: none; padding: 0; display: flex; justify-content: center;">
+					{% if posts.has_prev %}
+							<li style="margin-right: 5px;"><a href="{{ url_for('index', page=1) }}">« First</a></li>
+							<li style="display: inline;"><a href="{{ url_for('index', page=posts.prev_num) }}">Prev</a></li>
+					{% else %}
+							<li style="margin-right: 5px;">« First</li>
+					{% endif %}
+	
+					{% if posts.page > 4 %}
+							<li style="margin-right: 5px;"><a href="{{ url_for('index', page=1) }}">1</a></li>
+							<li style="margin-right: 5px;">...</li>
+					{% endif %}
+	
+					{% for p in range(posts.page - 2, posts.page + 3) if p > 0 and p <= posts.pages %}
+							<li style="margin-right: 5px; {% if p == posts.page %}font-weight: bold;{% endif %}">
+									{% if p == posts.page %}
+											<span style="font-weight: bold;">{{ p }}</span>
+									{% else %}
+											<a href="{{ url_for('index', page=p) }}">{{ p }}</a>
+									{% endif %}
+							</li>
+					{% endfor %}
+	
+					{% if posts.page < posts.pages - 3 %}
+							<li style="margin-right: 5px;">...</li>
+							<li style="margin-right: 5px;"><a href="{{ url_for('index', page=posts.pages) }}">{{ posts.pages }}</a></li>
+					{% endif %}
+	
+					{% if posts.has_next %}
+							<li style="margin-right: 5px;"><a href="{{ url_for('index', page=posts.next_num) }}">Next</a></li>
+							<li style="margin-right: 5px;"><a href="{{ url_for('index', page=posts.pages) }}">Last »</a></li>
+					{% else %}
+							<li style="margin-right: 5px;">Last »</li>
+					{% endif %}
+			</ul>
+	</nav>
 {% endblock %}
 
 	
