--- a/blogweb/app/static/welcome.css
+++ b/blogweb/app/static/welcome.css
@@ -1,186 +1,153 @@
-* {
+
+/* -- Font -- */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+*{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-
-body {
-  height: 2000px;
-  overflow-x: hidden;
-
-}
-
-.shell {
+/* -- Hero image Part -- */
+.hero-image{
+  color: #323232;
+  text-align: center;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-
-}
-
-header {
-  width: 100%;
-  height: 700px;
-  overflow: hidden;
-  clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 100%);
-  transition: clip-path 0.5s ease;
-  position: relative;
-}
-
-.img {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-  background: {{ url_for() }};
-  background-size: cover;
-  transform: scale(1);
-  transition: transform 0.5s ease;
-}
-
-.main {
-  width: 100%;
-  height: 100%;
-  display: flex;
   align-items: center;
-  flex-direction: column;
-  margin-top: 100px;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
-
-.main h2 {
-  font-size: 50px;
-  margin-bottom: 40px;
+.hero-text {
+  width: 65%;
 }
-
-.main span {
-  padding: 0 100px;
-  font-size: 30px;
-}
-
-
-
-@import url('https://fonts.googleapis.com/css?family=Lato:700,900');
-
-@font-face {
-  font-family: Arno Pro;
-  src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/ArnoPro-Regular.otf);
-  font-style: normal;
-}
-
-@font-face {
-  font-family: Arno Pro;
-  src: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/ArnoPro-Italic.otf);
-  font-style: italic;
-}
-
-p {
-  font-family: Arno Pro, serif;
-  font-size: 1.4rem;
-  line-height: 1.4;
-  margin: 0;
-}
-
-p.credits {
-  font-style: italic;
-  text-indent: 0 !important;
-  margin: 1rem 0;
-}
-
-p a {
-  font-weight: bolder;
-  color: #000;
-  text-decoration: none;
-}
-
-@supports (font-variant-caps: small-caps) {
-  .multicol:first-of-type p:first-of-type {
-      font-variant-caps: small-caps;
-  }
-}
-
-p:not(:first-of-type) {
-  text-indent: 1.4rem;
-}
-
-.multicol {
-  column-count: 4;
-  column-gap: 2rem;
-}
-
-.multicol+img {
-  margin: 2rem 0;
-}
-
-article {
-  width: 80%;
-  margin: 0 auto 4rem;
-}
-
-article img {
+/* -- Hero text and navigation links -- */
+.hero-text h1{
   width: 100%;
+  font-weight: 700;
+  font-size: 7.5vw;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+  padding: 1.7vw;
+  border-radius: 1.6rem;
+  cursor: pointer;
+  perspective: 1000px;
+  backdrop-filter: blur(8px);
 }
-
-article header {
-  margin-bottom: 2.5rem;
-  padding-bottom: 4rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
-}
-
-article h1 {
-  margin-top: 0;
-  font-size: 3rem;
-}
-
-article h2 {
-  break-after: column;
+.hero-text p{
   font-size: 1.5rem;
+  color: white;
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+.nav-btn a{
+  background-color: #323232;
+  color: #fff;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+  font-size: 1.2rem;
+  transition: all 0.3s ease;
 }
 
-h1,
-h2 {
-  font-family: Lato, sans-serif;
+.hero-image a:hover{
+  background-color: #222;
+}
+/* -- Pure color area -- */
+.blank, .blank-2{
+  width: 100%;
+  min-height: 40vh;
+  background-color: #323232;
 }
 
-@media all and (max-width: 1600px) {
-  .multicol {
-      column-count: 3;
-  }
+.second {
+  background-attachment: fixed;
 }
 
-@media all and (max-width: 1000px) {
-  .multicol {
-      column-count: 2;
-  }
+.card-container {
+  margin: 50px 0 50px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  gap: 2.5rem;
 }
 
-@media all and (max-width:800px) {
-  article h2 {
-      break-after: avoid;
-  }
-
-  .multicol {
-      column-count: 1;
-  }
+.card{
+  width: 280px;
+  height: 350px;
+  align-items: center;
+  border-radius: 0.8rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+  transition: all 0.3s ease;
+  perspective: 1000px;
+  backdrop-filter: blur(8px);
 }
 
-@media all and (max-width:600px) {
-  body {
-      margin: 0;
-  }
+.card:hover{
+  transform: scale(1.1);
+}
 
-  article {
-      width: 100%;
-  }
+.card .info{
+  align-items: center;
+  color: white;
+  margin: 10px;
+}
 
-  .multicol {
-      padding: 0 1rem;
-  }
+.card .info img{
+  width: 80%;
+  height: 180px;
+  background-size: cover;
+  background-position: center;
+  margin-top: 20px;
+  border-radius: 0.8rem;
+}
 
-  article header {
-      margin-bottom: 2.5rem;
-      padding-bottom: 0;
-      border-bottom: none;
-  }
+.card .info h3{
+  font-weight: 700;
+  font-size: 1.6rem;
+  margin-top: 0.8rem;
+}
 
-  h1 {
-      margin-bottom: 0;
-  }
+.blank-2{
+  min-height: 30vh;
+}
+
+.footer{
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer .column h3{
+  margin-top: 0.8rem;
+  margin-bottom: 1.5rem;
+  font-weight: 600;
+}
+
+.footer .column ul{
+  list-style: none;
+}
+
+.footer .column ul li{
+  margin-top: 10px;
+}
+
+.footer .column ul li a{
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  transition: all 0.3s ease;
+}
+
+.footer .column ul li a:hover{
+  color: #ccc;
 }
