--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -99,7 +99,7 @@
 		
 		</nav>
 		<div class="hero-image">
-			<img src="{{ url_for('static', filename='background.jpg') }}">
+			<img src="{{ url_for('static', filename='background.jpg') }}" style="width:100%">
 			<div class="heading">
 				<h2>Post your comments now!</h2>
 			</div>
@@ -192,6 +192,11 @@
 			{% endif %}
 		</script>
 		<script src="{{ url_for('static', filename='live2D.js') }}"></script>
+		<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+    </script>
 		{% block script %}	
 		{% endblock %}
 	</body>
