--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="main-content" style="margin-left: 20px;">
+<div class="container mt-3 sm-2 md-3 mb-2">
 	<h1>Hi, {{ current_user.username }}!</h1>
 	<button id="displayPostBtn" style="margin:20px" type="button" onclick="displayPostForm()" class="btn btn-primary">Show
 		Question
@@ -122,7 +122,7 @@
 		</div>
 
 		<!-- follower post -->
-		<div id="tab2" class="tabcontent">
+		<div id="tab2" class="tabcontent container mt-3 sm-2 md-3 mb-2">
 			{% for post in follow_posts %}
 			{% include '_post_question.html' %}
 			{% endfor %}
@@ -189,7 +189,7 @@
 		}
 
 	</script>
-	<script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
+	<script src="https://cdn.ckeditor.com/4.16.2/full/ckeditor.js"></script>
 	<script>
 		CKEDITOR.replace('content');
 	</script>
