--- a/blogweb/app/templates/messages.html
+++ b/blogweb/app/templates/messages.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container mt-3">
     <h1>{{ 'Messages' }}</h1><br>
     {% for post in messages %}
         {% include '_message.html' %}
@@ -47,6 +48,6 @@
       
         </ul>
       </nav>
-      
+    </div>     
       
 {% endblock %}
