--- a/blogweb/app/templates/send_message.html
+++ b/blogweb/app/templates/send_message.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container mt-3">
     <h1>Send Message to {{recipient}}  </h1>
     {% if form %}
 		<form action="" method="POST">
@@ -12,6 +13,6 @@
 				{% endfor %}
 		</p>
 		<p>{{ form.submit(class="btn btn-primary") }}</p>
-</form>
-{% endif %}
+</form>{% endif %}
+</div>
 {% endblock %}
