--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Profile{% endblock %}
 {% block content %}
-<div>
+<div class="container mt-3">
   <table>
     <tr valign="top">
         <td><img src="{{ user.avatar(200) }}" style="width: 100px; height: 100px;"></td>
