--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -22,13 +22,11 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-			crossorigin="anonymous">
-		</script>
+		
 	</head>
 	<body>
+		
+		<!-- Sidebar -->
 		<nav>
 			<div class="sidebar">
 				<input type="checkbox" id="checkbox" checked>
@@ -104,6 +102,10 @@
 		</div>
 		{% block content %}
 		{% endblock %}
+		
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+		<script src="{{ url_for('static', filename='darkmode.js') }}"></script>
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
 				const checkbox = document.getElementById("checkbox");
@@ -111,23 +113,22 @@
 				const sidebar = document.querySelector('.sidebar');
 
 				checkbox.addEventListener("change", function () {
-						if (checkbox.checked) {
-								searchContainer.style.visibility = "visible";
-						} else {
-								searchContainer.style.visibility = "hidden";
-						}
+					if (checkbox.checked) {
+							searchContainer.style.visibility = "visible";
+					} else {
+							searchContainer.style.visibility = "hidden";
+					}
 				});
 
 				document.addEventListener('click', function(event) {
-						// Check if the click occurred outside of the sidebar and checkbox, and sidebar is not visible
-						if (!sidebar.contains(event.target) && event.target !== checkbox && !checkbox.checked) {
-								checkbox.checked = true; // Check the checkbox
-								searchContainer.style.visibility = "visible"; // Make the search area visible
-						}
+					// Check if the click occurred outside of the sidebar and checkbox, and sidebar is not visible
+					if (!sidebar.contains(event.target) && event.target !== checkbox && !checkbox.checked) {
+							checkbox.checked = true; // Check the checkbox
+							searchContainer.style.visibility = "visible"; // Make the search area visible
+					}
 				});
 			});
 		</script>
-	
 		<script>
 			// This script is to alert users if they wanna delete their accounts.
 			document.getElementById("delete-form").addEventListener("submit", function(event) {
@@ -189,7 +190,6 @@
 			document.addEventListener('DOMContentLoaded', initialize_notifications);
 			{% endif %}
 		</script>
-		<script src="{{ url_for('static', filename='live2D.js') }}"></script>
 		{% block script %}	
 		{% endblock %}
 	</body>
