--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -1,146 +1,150 @@
 {% extends "base.html" %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<div class="main-content" style = "margin-left: 20px;">
-    <h1>Hi, {{ current_user.username }}!</h1>
-    <button id="displayPostBtn" style = "margin:20px" type="button" onclick="displayPostForm()" class="btn btn-primary">Show Question
-        form</button>
+<div class="main-content" style="margin-left: 20px;">
+  <h1>Hi, {{ current_user.username }}!</h1>
+  <button id="displayPostBtn" style="margin:20px" type="button" onclick="displayPostForm()" class="btn btn-primary">
+    Show Question form
+  </button>
+  <form id="postForm" action="" method="POST" style="margin:20px; display: none">
+    {{ form.hidden_tag() }}
+    <p>
+      {{ form.title.label }}<br>
+      {{ form.title(size=50) }}<br>
+      {% for error in form.title.errors %}
+      <span style="color: red;">[{{ error }}]</span>
+      {% endfor %}
+    </p>
+    <p>
+      {{ form.content.label }}<br>
+      {{ form.content(cols=50, rows=4) }}<br>
+      {% for error in form.content.errors %}
+      <span style="color: red;">[{{ error }}]</span>
+      {% endfor %}
+    </p>
+    <p>{{ form.submit() }}</p>
+  </form>
+  <ul class="nav nav-tabs" style="cursor:pointer">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">All Post</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" onclick="showTab(event, 'tab2')">Follwer Post</a>
+    </li>
+    <li class="nav-item" onclick="showTab(event, 'tab3')">
+      <a class="nav-link">Follower Rank</a>
+    </li>
+  </ul>
 
-    <form id="postForm" action="" method="POST" style="margin:20px; display: none">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.title.label }}<br>
-            {{ form.title(size=50) }}<br>
-            {% for error in form.title.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.content.label }}<br>
-            {{ form.content(cols=50, rows=4) }}<br>
-            {% for error in form.content.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    <ul class="nav nav-tabs" style="cursor:pointer">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" onclick="showTab(event, 'tab1')">All Post</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" onclick="showTab(event, 'tab2')">Follwer Post</a>
-        </li>
-        <li class="nav-item" onclick="showTab(event, 'tab3')">
-          <a class="nav-link" >Follower Rank</a>
-        </li>
+  <div id="tab1" class="tabcontent" style="display: block;">
+    <h3>Recent Post</h3>
+    {% for post in all_posts %}
+    {% include '_post_question.html' %}
+    {% endfor %}
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+
+        {% if all_posts.has_prev %}
+        <li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">First</a></li>
+        <li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.prev_num) }}">Prev</a></li>
+        {% else %}
+        <li class="page-item disabled"><span class="page-link">First</span></li>
+        {% endif %}
+
+        {% if all_posts.page > 4 %}
+        <li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">1</a></li>
+        <li class="page-item disabled"><span class="page-link">...</span></li>
+        {% endif %}
+
+        {% for p in range(all_posts.page - 2, all_posts.page + 3) if p > 0 and p <= all_posts.pages %} <li
+          class="page-item {% if p == all_posts.page %}active{% endif %}">
+          {% if p == all_posts.page %}
+          <span class="page-link">{{ p }}</span>
+          {% else %}
+          <a class="page-link" href="{{ url_for('index', page=p) }}">{{ p }}</a>
+          {% endif %}
+          </li>
+          {% endfor %}
+
+          {% if all_posts.page < all_posts.pages - 3 %} <li class="page-item disabled"><span
+              class="page-link">...</span></li>
+            <li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">{{
+                all_posts.pages }}</a></li>
+            {% endif %}
+
+            {% if all_posts.has_next %}
+            <li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.next_num) }}">Next</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">Last</a></li>
+            {% else %}
+            <li class="page-item disabled"><span class="page-link">Next</span></li>
+            <li class="page-item disabled"><span class="page-link">Last</span></li>
+            {% endif %}
       </ul>
- 
-    <div id="tab1"  class="tabcontent" style="display: block;">
+    </nav>
+  </div>
+  <!-- follower post -->
+  <div id="tab2" class="tabcontent">
+    {% for post in follow_posts %}
+    {% include '_post_question.html' %}
+    {% endfor %}
+  </div>
 
-        <h3>Recent Post</h3>
-
-
-        {% for post in all_posts %}
-            {% include '_post_question.html' %}
-        {% endfor %}
-
-		<nav aria-label="Page navigation example">
-			<ul class="pagination justify-content-center">
-		
-				{% if all_posts.has_prev %}
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">First</a></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.prev_num) }}">Prev</a></li>
-				{% else %}
-					<li class="page-item disabled"><span class="page-link">First</span></li>
-				{% endif %}
-		
-				{% if all_posts.page > 4 %}
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">1</a></li>
-					<li class="page-item disabled"><span class="page-link">...</span></li>
-				{% endif %}
-		
-				{% for p in range(all_posts.page - 2, all_posts.page + 3) if p > 0 and p <= all_posts.pages %}
-					<li class="page-item {% if p == all_posts.page %}active{% endif %}">
-						{% if p == all_posts.page %}
-							<span class="page-link">{{ p }}</span>
-						{% else %}
-							<a class="page-link" href="{{ url_for('index', page=p) }}">{{ p }}</a>
-						{% endif %}
-					</li>
-				{% endfor %}
-		
-				{% if all_posts.page < all_posts.pages - 3 %}
-					<li class="page-item disabled"><span class="page-link">...</span></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">{{ all_posts.pages }}</a></li>
-				{% endif %}
-		
-				{% if all_posts.has_next %}
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.next_num) }}">Next</a></li>
-					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=all_posts.pages) }}">Last</a></li>
-				{% else %}
-					<li class="page-item disabled"><span class="page-link">Next</span></li>
-					<li class="page-item disabled"><span class="page-link">Last</span></li>
-				{% endif %}		
-			</ul>
-		</nav>	
-    </div>
-    <!-- follower post -->
-    <div id="tab2" class="tabcontent">
-        {% for post in follow_posts %}
-            {% include '_post_question.html' %}
-        {% endfor %}
-    </div>
-       
-    <div id="tab3" class="tabcontent">
-        <h3>Tab 3 content</h3>
-        <p>This is the content for tab 3.</p>
-    </div>
-	
-{% endblock %}
-
-      
-
-
-{% block script %}
-<script>
-    function displayPostForm() {
-        let displayPostBtn = document.getElementById("displayPostBtn");
-        let postForm = document.getElementById("postForm")
-        if (postForm.style.display == "none") {
-            postForm.style.display = "block";
-            displayPostBtn.innerHTML = "Hide Question form";
-        } 
-        else {
-            postForm.style.display = "none";
-            displayPostBtn.innerHTML = "Show Question form";
-
-        }
-    }
+  <div id="tab3" class="tabcontent">
+    <h3>Tab 3 content</h3>
+    <p>This is the content for tab 3.</p>
+  </div>
+  <!-- Map display -->
+  <div id="map-container">
+    <div id="map"></div>
+  </div>
   
-    function showTab(event, tabName) {
-        var i, tabcontent, navlink;
-        tabcontent = document.getElementsByClassName("tabcontent");
-        for (i = 0; i < tabcontent.length; i++) {
-            tabcontent[i].style.display = "none";
-        }
-        navlink = document.getElementsByClassName("nav-link");
-        for (i = 0; i < navlink.length; i++) {
-            navlink[i].className = navlink[i].className.replace(" active", "");
-        }
-        document.getElementById(tabName).style.display = "block";
-        event.currentTarget.className += " active";
+  <!-- Interaction-->
+  <div class="interaction-container">
+    <div id="dialog">
+      <p></p>
+    </div>
+  </div>
+  {% endblock %}
+
+  {% block script %}
+  <script>
+    function displayPostForm() {
+      let displayPostBtn = document.getElementById("displayPostBtn");
+      let postForm = document.getElementById("postForm")
+      if (postForm.style.display == "none") {
+        postForm.style.display = "block";
+        displayPostBtn.innerHTML = "Hide Question form";
+      }
+      else {
+        postForm.style.display = "none";
+        displayPostBtn.innerHTML = "Show Question form";
+
+      }
     }
 
-</script>
-<script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
-<script>
-    CKEDITOR.replace('content');
-</script>
-{% endblock %}
-
+    function showTab(event, tabName) {
+      var i, tabcontent, navlink;
+      tabcontent = document.getElementsByClassName("tabcontent");
+      for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+      }
+      navlink = document.getElementsByClassName("nav-link");
+      for (i = 0; i < navlink.length; i++) {
+        navlink[i].className = navlink[i].className.replace(" active", "");
+      }
+      document.getElementById(tabName).style.display = "block";
+      event.currentTarget.className += " active";
+    }
+  </script>
+  <script src="https://cdn.ckeditor.com/4.16.2/basic/ckeditor.js"></script>
+  <script>CKEDITOR.replace('content');</script>
+  <script src="{{ url_for('static', filename='live2D.js') }}"></script>
+  <script src="{{ url_for('static', filename='dialog.js') }}"></script>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
+  <script src="{{ url_for('static', filename='map.js') }}"></script>
+  {% endblock %}
