--- a/blogweb/app/static/base.css
+++ b/blogweb/app/static/base.css
@@ -8,7 +8,10 @@ body {
 	min-height: 100vh;
 	background-color: #f2f2f2;
 }
-
+/* -- Dark mode -- */
+.darkmode-layer, .darkmode-toggle {
+  z-index: 500;
+}
 /* -- Sidebar -- */
 .sidebar {
 	position: relative;
