--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -60,7 +60,7 @@
 					</div>
 					<div class=title-right>
 						<div class="title-count">
-							Count
+							Reply Count
 						</div>
 						<div class="title-date">
 							Date
@@ -126,6 +126,52 @@
 			{% for post in follow_posts %}
 			{% include '_post_question.html' %}
 			{% endfor %}
+
+			<nav aria-label="Page navigation example">
+				<ul class="pagination justify-content-center">
+
+					{% if follow_posts.has_prev %}
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">First</a></li>
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=follow_posts.prev_num) }}">Prev</a>
+					</li>
+					{% else %}
+					<li class="page-item disabled"><span class="page-link">First</span></li>
+					{% endif %}
+
+					{% if follow_posts.page > 4 %}
+					<li class="page-item"><a class="page-link" href="{{ url_for('index', page=1) }}">1</a></li>
+					<li class="page-item disabled"><span class="page-link">...</span></li>
+					{% endif %}
+
+					{% for p in range(follow_posts.page - 2, follow_posts.page + 3) if p > 0 and p <= follow_posts.pages %} <li
+						class="page-item {% if p == follow_posts.page %}active{% endif %}">
+						{% if p == follow_posts.page %}
+						<span class="page-link">{{ p }}</span>
+						{% else %}
+						<a class="page-link" href="{{ url_for('index', page=p) }}">{{ p }}</a>
+						{% endif %}
+						</li>
+						{% endfor %}
+
+						{% if follow_posts.page < follow_posts.pages - 3 %} <li class="page-item disabled"><span
+								class="page-link">...</span></li>
+							<li class="page-item"><a class="page-link" href="{{ url_for('index', page=follow_posts.pages) }}">{{
+									follow_posts.pages }}</a></li>
+							{% endif %}
+
+							{% if follow_posts.has_next %}
+							<li class="page-item"><a class="page-link"
+									href="{{ url_for('index', page=follow_posts.next_num) }}">Next</a>
+							</li>
+							<li class="page-item"><a class="page-link" href="{{ url_for('index', page=follow_posts.pages) }}">Last</a>
+							</li>
+							{% else %}
+							<li class="page-item disabled"><span class="page-link">Next</span></li>
+							<li class="page-item disabled"><span class="page-link">Last</span></li>
+							{% endif %}
+				</ul>
+			</nav>
+
 		</div>
 
 		<div id="tab3" class="tabcontent">
@@ -136,22 +182,22 @@
 
 
 	<!-- Modal -->
-		<div class="modal fade" id="warnModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h1 class="modal-title fs-5" id="modalTitle">Modal title</h1>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<p id="modalContent">Modal Content</p>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					</div>
+	<div class="modal fade" id="warnModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="modalTitle">Modal title</h1>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<p id="modalContent">Modal Content</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
+	</div>
 
 	{% endblock %}
 
